js/js.translator/testData/incremental/invalidation/interfaceOpenMethodsInOpenClass/lib1/ClassB.0.kt
open class B : A<Int> {
}
